--- a/index.html
+++ b/index.html
@@ -229,11 +229,79 @@
         width: 100%;
       }
     }
+
+    /* Celebration overlay and confetti */
+    #celebrationOverlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(7, 0, 20, 0.85);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 20;
+    }
+
+    .celebration-card {
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 18px;
+      border: 1px solid rgba(255, 255, 255, 0.25);
+      padding: 24px 22px 18px;
+      max-width: 420px;
+      width: 90%;
+      text-align: center;
+      box-shadow: 0 16px 40px rgba(0, 0, 0, 0.6);
+      animation: popIn 0.4s ease-out;
+    }
+
+    .celebration-card h2 {
+      margin-bottom: 8px;
+      font-size: 26px;
+    }
+
+    .celebration-card p {
+      font-size: 14px;
+      line-height: 1.6;
+      margin-bottom: 18px;
+    }
+
+    .celebration-card button {
+      border-radius: 999px;
+      padding: 8px 20px;
+      border: none;
+      cursor: pointer;
+      background: linear-gradient(135deg, #ff477e, #ffb3c6);
+      color: #2b0414;
+      font-weight: 600;
+      font-size: 14px;
+      box-shadow: 0 8px 20px rgba(255, 71, 126, 0.6);
+    }
+
+    .celebration-card button:hover {
+      transform: translateY(-1px);
+    }
+
+    @keyframes popIn {
+      from {
+        transform: scale(0.8) translateY(10px);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1) translateY(0);
+        opacity: 1;
+      }
+    }
+
+    #confettiCanvas {
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      z-index: 19;
+    }
   </style>
 </head>
 <body>
+  <!-- Floating hearts background -->
   <div class="hearts">
-    <!-- simple random-ish hearts -->
     <div class="heart" style="left: 10%; animation-delay: 0s;"></div>
     <div class="heart" style="left: 25%; animation-delay: 2s; opacity: 0.4;"></div>
     <div class="heart" style="left: 40%; animation-delay: 4s;"></div>
@@ -242,6 +310,7 @@
     <div class="heart" style="left: 88%; animation-delay: 5s; opacity: 0.35;"></div>
   </div>
 
+  <!-- Main Valentine card -->
   <main class="container">
     <section class="card">
       <div class="tag">
@@ -249,7 +318,7 @@
         Valentine’s Day • 14 Feb
       </div>
 
-      <!-- Put her name here -->
+      <!-- Put her actual name here -->
       <h1>Hey <span class="name">[Her Name]</span> 💌</h1>
 
       <p class="subtitle">
@@ -280,14 +349,92 @@
     </section>
   </main>
 
+  <!-- Celebration overlay + confetti canvas -->
+  <div id="celebrationOverlay">
+    <div class="celebration-card">
+      <h2>Yaaay! 🎉</h2>
+      <p>You just said yes, and my heart is doing a happy dance right now. ❤️</p>
+      <button id="closeCelebration">Awww 🥰</button>
+    </div>
+  </div>
+
+  <canvas id="confettiCanvas"></canvas>
+
   <script>
     const yesBtn = document.getElementById("yesBtn");
     const noBtn = document.getElementById("noBtn");
     const answer = document.getElementById("answerText");
 
+    const overlay = document.getElementById("celebrationOverlay");
+    const closeCelebration = document.getElementById("closeCelebration");
+    const confettiCanvas = document.getElementById("confettiCanvas");
+    const ctx = confettiCanvas.getContext("2d");
+
+    function resizeCanvas() {
+      confettiCanvas.width = window.innerWidth;
+      confettiCanvas.height = window.innerHeight;
+    }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+
+    const colors = ["#ff477e", "#ff8fab", "#ffc6ff", "#f9f871"];
+    let particles = [];
+
+    function createConfetti() {
+      particles = [];
+      const count = 150;
+      for (let i = 0; i < count; i++) {
+        particles.push({
+          x: Math.random() * confettiCanvas.width,
+          y: Math.random() * -confettiCanvas.height,
+          size: Math.random() * 6 + 4,
+          speedY: Math.random() * 3 + 2,
+          speedX: (Math.random() - 0.5) * 2,
+          color: colors[Math.floor(Math.random() * colors.length)],
+          rotation: Math.random() * Math.PI * 2,
+          rotationSpeed: (Math.random() - 0.5) * 0.2
+        });
+      }
+    }
+
+    let animationId;
+    function animateConfetti() {
+      ctx.clearRect(0, 0, confettiCanvas.width, confettiCanvas.height);
+
+      particles.forEach(p => {
+        p.y += p.speedY;
+        p.x += p.speedX;
+        p.rotation += p.rotationSpeed;
+
+        if (p.y > confettiCanvas.height + 20) {
+          p.y = -20;
+          p.x = Math.random() * confettiCanvas.width;
+        }
+
+        ctx.save();
+        ctx.translate(p.x, p.y);
+        ctx.rotate(p.rotation);
+        ctx.fillStyle = p.color;
+        ctx.fillRect(-p.size / 2, -p.size / 2, p.size, p.size * 0.4);
+        ctx.restore();
+      });
+
+      animationId = requestAnimationFrame(animateConfetti);
+    }
+
     yesBtn.addEventListener("click", () => {
       answer.textContent =
         "You just made me the happiest human on this planet. Be ready for a date! 💖";
+      overlay.style.display = "flex";
+      createConfetti();
+      cancelAnimationFrame(animationId);
+      animateConfetti();
+    });
+
+    closeCelebration.addEventListener("click", () => {
+      overlay.style.display = "none";
+      cancelAnimationFrame(animationId);
+      ctx.clearRect(0, 0, confettiCanvas.width, confettiCanvas.height);
     });
 
     noBtn.addEventListener("mouseover", () => {
