Update name and badge details in index.html

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       </div>
 
       <!-- Put her actual name here -->
-      <h1>Hey <span class="name">[Her Name]</span> 💌</h1>
+      <h1>Hey <span class="name">Jinghua</span> 💌</h1>
 
       <p class="subtitle">
         There are a million ways to ask this, but I chose the one that lets me
@@ -327,7 +327,7 @@
       </p>
 
       <div class="details">
-        <div class="badge"><span></span> One boy, slightly nervous</div>
+        <div class="badge"><span></span> One girl, slightly nervous</div>
         <div class="badge"><span></span> One girl, extremely amazing</div>
         <div class="badge"><span></span> Location: wherever we are together</div>
       </div>
