text for personalization in index.html

--- a/index.html
+++ b/index.html
@@ -318,7 +318,6 @@
         Valentine’s Day • 14 Feb
       </div>
 
-      <!-- Put her actual name here -->
       <h1>Hey <span class="name">Jinghua</span> 💌</h1>
 
       <p class="subtitle">
@@ -328,7 +327,7 @@
 
       <div class="details">
         <div class="badge"><span></span> One girl, slightly nervous</div>
-        <div class="badge"><span></span> One girl, extremely amazing</div>
+        <div class="badge"><span></span> Another girl, absolutely amazing</div>
         <div class="badge"><span></span> Location: wherever we are together</div>
       </div>
 
@@ -424,7 +423,7 @@
 
     yesBtn.addEventListener("click", () => {
       answer.textContent =
-        "You just made me the happiest human on this planet. Be ready for a date! 💖";
+        "You just made me the happiest girl on this planet. Be ready for a date! 💖";
       overlay.style.display = "flex";
       createConfetti();
       cancelAnimationFrame(animationId);
